<resources>
    <string name="app_name">M3U8Loader</string>

    <string name="name">Name:</string>
    <string name="url_link">Url link:</string>

    <string name="threads">Threads:</string>
    <string name="repeat_error">Repeat on error:</string>
    <string name="subtitles_url">Subtitles url:</string>
    <string name="useragent">User agent:</string>
    <string name="cookies">Cookies:</string>
    <string name="download_path">Download path:</string>
    <string name="set_def_settings">Set the default settings</string>
    <string name="dynamic_file_size">Dynamic file size (experimental)</string>
    <string name="load_items_size">Load segments size on add (can take a long time)</string>

    <string name="selected_folder_label">Selected folder:</string>
    <string name="new_directory_title">New folder</string>
    <string name="new_directory_name_label">Name of new folder:</string>

    <string name="range_changed">The range is changed, you need to download it again</string>
    <string name="set_range_and_clean">Set range and clean loading?</string>
    <string name="warn_clean_message">Caution, during cleaning, all settings and the downloaded file are deleted.\nClean?</string>

    <string name="refresh_label">Refresh</string>
    <string name="clear_download_label">Clear download</string>
    <string name="add_label">Add</string>
    <string name="download_label">Download</string>
    <string name="delete_label">Delete</string>
    <string name="delete_all_label">Delete all items</string>
    <string name="delete_with_files">Delete with files</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="status_label">Status</string>
    <string name="settings">Settings</string>

    <string name="status_load_stopped">Idle</string>
    <string name="status_load_loading">Loading</string>
    <string name="status_load_complete">Complete</string>
    <string name="status_load_error">Error</string>
    <string name="status_load_unknown">Unknown</string>

    <string name="permission_storage_msg">Storage permission is needed to download and write files</string>
    <string name="permission_doze_mode_msg">Request permission, to work in doze mode</string>
    <string name="permission_btn">GRANT</string>

    <string name="replace_url">Replace the url in loading?</string>
    <string name="replace_url_msg">Loading with the same name exists, replace his URL?</string>

    <string name="donation">Donation</string>
    <string name="donat_label">Donate</string>
    <string name="donation_msg">If this app makes you happier, you can give me a</string>

    <string name="error">Error</string>
    <string name="error_load_subs">Error load subtitles</string>
    <string name="error_url_wrong_format">Wrong url format, must be m3u8 or m3u</string>
    <string name="error_file_notexist">File not found</string>
    <string name="error_directory_permission">Directory permission denied</string>
    <string name="error_create_folder">Error create folder</string>
    <string name="error_change_url">Error change url</string>
    <string name="error_empty_url">Error empty url</string>
    <string name="error_empty_name">Error empty name</string>
    <string name="error_same_url">Loading with the same url already exists</string>
    <string name="error_find_cfg_save_dir">Error save directory permission denied or not exist</string>

    <string name="choose_theme">Choose theme</string>
    <string-array name="themes_names">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string name="choose_player">Choose player</string>
    <string-array name="players_names">
        <item>Choose player</item>
        <item>Default player</item>
        <item>MX Player</item>
        <item>Kodi player</item>
    </string-array>
</resources>
