<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    tools:context="ru.yourok.m3u8loader.EditLoaderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:text="@string/url_link" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:text="@string/name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/useragent" />

            <EditText
                android:id="@+id/editTextUseragent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cookies" />

            <EditText
                android:id="@+id/editTextCookies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/textViewItemsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <SeekBar
                android:id="@+id/rangeSeekbarLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@android:color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <SeekBar
                android:id="@+id/rangeSeekbarRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@android:color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/transparent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRefreshClick"
                android:text="@string/refresh_label" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClearClick"
                android:text="@string/clear_download_label" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/DeviceDefault.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="okBtnClick"
            android:text="@android:string/ok" />

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelBtnClick"
            android:text="@android:string/cancel" />
    </LinearLayout>
</RelativeLayout>
