<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_remove_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="200dp"
    android:minWidth="400dp"
    android:orientation="vertical"
    tools:context="ru.yourok.m3u8loader.RemoveDialogActivity">

    <TextView
        android:id="@+id/textViewDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/delete_label"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle" />

    <ProgressBar
        android:id="@+id/progressListLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <ListView
        android:id="@+id/listViewRemoveFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"></ListView>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/DeviceDefault.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonRemove"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="removeBtnClick"
            android:text="@string/remove_from_list" />

        <Button
            android:id="@+id/buttonDelete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="deleteBtnClick"
            android:text="@string/delete_with_files" />

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="cancelBtnClick"
            android:text="@android:string/cancel" />
    </LinearLayout>

</LinearLayout>
