<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".activitys.PreferenceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewDirectoryPath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_path" />

                <EditText
                    android:id="@+id/editTextDirectoryPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewDirectoryPath"
                    android:layout_toLeftOf="@+id/imageButtonSearchDirectory"
                    android:layout_toStartOf="@+id/imageButtonSearchDirectory"
                    android:ems="10"
                    android:inputType="textUri" />

                <ImageButton
                    android:id="@+id/imageButtonSearchDirectory"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/editTextDirectoryPath"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    app:srcCompat="@drawable/ic_folder_open_black_24dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threads" />

            <EditText
                android:id="@+id/editTextThreads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_error" />

            <EditText
                android:id="@+id/editTextRepeatError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/useragent" />

            <EditText
                android:id="@+id/editTextUseragent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cookies" />

            <EditText
                android:id="@+id/editTextCookies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <CheckBox
                android:id="@+id/checkboxLoadItemsSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preload_fragments_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <CheckBox
                android:id="@+id/checkboxUseFFMPEG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/convert_on_load_end" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <CheckBox
                android:id="@+id/checkBoxChooseTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_player" />

            <Spinner
                android:id="@+id/spinnerChoosePlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/buttonDefOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_def_settings" />

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/DeviceDefault.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok" />

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />
    </LinearLayout>

</RelativeLayout>